Test/git-issues/git-issue-3187d.dfy.expect
git-issue-3187d.dfy(6,17): Error: a mutable field is not allowed to have an initializer
git-issue-3187d.dfy(9,8): Error: a mutable field must be declared with a type
git-issue-3187d.dfy(12,10): Error: a mutable field must be declared with a type and may not have an initializer
3 parse errors detected in git-issue-3187d.dfy
